--- a/AboutWindowController.xib
+++ b/AboutWindowController.xib
@@ -18,16 +18,27 @@
         <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" animationBehavior="default" id="F0z-JX-Cv5">
             <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="196" y="240" width="350" height="450"/>
+            <rect key="contentRect" x="196" y="240" width="350" height="253"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
             <view key="contentView" id="se5-gp-TjO">
-                <rect key="frame" x="0.0" y="0.0" width="350" height="450"/>
+                <rect key="frame" x="0.0" y="0.0" width="350" height="253"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fvJ-Lt-Imh">
-                        <rect key="frame" x="123" y="325" width="105" height="105"/>
+                        <rect key="frame" x="123" y="128" width="105" height="105"/>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="frenk_logo" id="1Hz-MV-sa5"/>
                     </imageView>
+                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fyC-iw-o7a">
+                        <rect key="frame" x="25" y="69" width="300" height="51"/>
+                        <textFieldCell key="cell" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="center" id="KlZ-Z7-hyg">
+                            <font key="font" metaFont="system"/>
+                            <string key="title">Frenk v. %VERSION%
+
+ © %YEAR% Frenk. All rights reserved.</string>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.75264849290780134" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FVU-XV-DJQ">
                         <rect key="frame" x="115" y="19" width="121" height="17"/>
                         <buttonCell key="cell" type="inline" title="www.frenkapp.com" bezelStyle="inline" alignment="center" borderStyle="border" inset="2" id="Kv3-Ek-0HK">
@@ -38,29 +49,12 @@
                             <action selector="goToURL:" target="-2" id="AV5-0e-piZ"/>
                         </connections>
                     </button>
-                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fyC-iw-o7a">
-                        <rect key="frame" x="25" y="113" width="300" height="204"/>
-                        <textFieldCell key="cell" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="center" id="KlZ-Z7-hyg">
-                            <font key="font" metaFont="system"/>
-                            <string key="title">Frenk v. 1.0.0
-
-Lei ha clacsonato1
-  voglio il vicesindaco, Necchi
-  voglio il numero, Necchi
-  mi porga il numero bitumando il vicesindaco, dico, bitumando
-  il vicesindaco come fosse un numero
-
- © %YEAR% Frenk. All rights reserved.</string>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.75264849290780134" colorSpace="calibratedRGB"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
                 </subviews>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
             </connections>
-            <point key="canvasLocation" x="154" y="228"/>
+            <point key="canvasLocation" x="154" y="129.5"/>
         </window>
     </objects>
     <resources>
