--- a/AboutWindowController.xib
+++ b/AboutWindowController.xib
@@ -35,7 +35,7 @@
                             <string key="title">Frenk v. %VERSION%
 
  © %YEAR% Frenk. All rights reserved.</string>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.75264849290780134" colorSpace="calibratedRGB"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
